// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`getPlaceholderImageMarkup\` by default should render the right structure 1`] = `
<div
  className="image-with-placeholder-container"
>
  <Image
    alt="someAltText"
    as="img"
    avatar={false}
    fluid={true}
    onLoad={[Function]}
    title="someTitle"
    ui={true}
  >
    <div
      alt="someAltText"
      className="ui fluid image"
      onLoad={[Function]}
      title="someTitle"
    >
      <Label
        content="someLabel"
      >
        <div
          className="ui label"
          onClick={[Function]}
        >
          someLabel
        </div>
      </Label>
    </div>
  </Image>
  <div
    className="placeholder-image-container"
  >
    <img
      className="placeholder-image ui image fluid"
      src="anotherUrl"
    />
    <Label
      content="someLabel"
    >
      <div
        className="ui label"
        onClick={[Function]}
      >
        someLabel
      </div>
    </Label>
  </div>
</div>
`;

exports[`\`getPlaceholderImageMarkup\` if \`imageUrl\` is passed should render the right structure 1`] = `
<div
  className="image-with-placeholder-container"
>
  <Image
    alt="someAltText"
    as="img"
    avatar={false}
    fluid={true}
    onLoad={[Function]}
    src="yoyoUrl"
    title="someTitle"
    ui={true}
  >
    <img
      alt="someAltText"
      className="ui fluid image"
      onLoad={[Function]}
      src="yoyoUrl"
      title="someTitle"
    />
  </Image>
  <div
    className="placeholder-image-container"
  >
    <img
      className="placeholder-image ui image fluid"
      src="anotherUrl"
    />
  </div>
</div>
`;

exports[`\`getPlaceholderImageMarkup\` if \`isImageLoaded === false\` should render the right structure 1`] = `
<div
  className="image-with-placeholder-container has-blurred-children"
>
  <Image
    alt="someAltText"
    as="img"
    avatar={false}
    fluid={true}
    onLoad={[Function]}
    title="someTitle"
    ui={true}
  >
    <div
      alt="someAltText"
      className="ui fluid image"
      onLoad={[Function]}
      title="someTitle"
    >
      <Label
        content="someLabel"
      >
        <div
          className="ui label"
          onClick={[Function]}
        >
          someLabel
        </div>
      </Label>
    </div>
  </Image>
  <div
    className="placeholder-image-container"
  >
    <img
      className="placeholder-image ui image fluid"
      src="anotherUrl"
    />
    <Label
      content="someLabel"
    >
      <div
        className="ui label"
        onClick={[Function]}
      >
        someLabel
      </div>
    </Label>
  </div>
</div>
`;
